syntax = "proto3";

option go_package = "github.com/Microsoft/hcsshim/cmd/ncproxy/ncproxygrpc;ncproxygrpc";

import weak "gogoproto/gogo.proto";

service NetworkConfigProxy {
    rpc RegisterNetworkConfigAgent(RegisterNetworkConfigAgentRequest) returns (RegisterNetworkConfigAgentResponse) {}
    rpc AddNIC(AddNICRequest) returns (AddNICResponse) {}
}

message RegisterNetworkConfigAgentRequest {
    string agent_address = 1;
    string network_id = 2;
}

message RegisterNetworkConfigAgentResponse {}

message AddNICRequest {
    string namespace_id = 1;
    string nic_id = 2;
    string endpoint_id = 3;
}

message AddNICResponse {}